Added The Doctor Tab and informations and Add new Doctor
